--- a/package.json
+++ b/package.json
@@ -12,16 +12,24 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.37.1"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.48",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
+    "@types/passport-jwt": "^4.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
