--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.48",
